Added abstract, HTML framework

--- a/click-here-to-save-archaeology/index.html
+++ b/click-here-to-save-archaeology/index.html
@@ -1,1 +1,35 @@
-Hi again.
+<html>
+  <head>
+    <title>Click Here to Save Archaeology</title>
+    <link rel="stylesheet" href="http://opencontext.dainst.org/static/bootstrap/3.3.4/css/bootstrap.min.css">
+  </head>
+  
+  <body>
+    <div class="container-fluid">
+      <div class="container-fluid">
+        <div class="jumbotron">
+          <h1>Click Here to Save Archaeology</h1>
+          <h4><em>Draft, to be submitted for Mobilizing the Past</em></h4>
+          <address>
+            <strong>Eric C. Kansa</strong><br>
+            <a href="http://opencontext.org">http://opencontext.org</a>
+          </address>
+          
+          <h3>Abstract</h3>
+          <p class="lead small">
+          This essay owes much to the trenchant criticism of Internet utopianism offered by Evgeny Morozov 
+          in his influential book, To Save Everything, Click Here (2014). As such, this essay reflects on 
+          some issues in the social and professional context of digital archaeology that rarely see public discussion. 
+          Digital archaeology is profoundly shaped by an institutional landscape that demands the 
+          commoditization, marketing, and branding of scholarship “as a service”. These forces make it 
+          extraordinarily difficult to sustain substantive and reflective intellectual engagement in our 
+          increasingly digitized discipline. As a strategy to overcome these issues, this paper highlights 
+          why digital engagement requires much longer time scales in funding and greater professional 
+          commitment to recognizing the process and conduct of research rather than rewarding only the 
+          efficient production of measurable research outcomes.
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
