Changed css link

--- a/click-here-to-save-archaeology/index.html
+++ b/click-here-to-save-archaeology/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Click Here to Save Archaeology</title>
-    <link rel="stylesheet" href="http://opencontext.dainst.org/static/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
   </head>
   
   <body>
