Test end note style

--- a/click-here-to-save-archaeology/index.html
+++ b/click-here-to-save-archaeology/index.html
@@ -2,6 +2,12 @@
   <head>
     <title>Click Here to Save Archaeology</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+    <style type="text/css">
+      a.fnote {
+        vertical-align:super;
+        font-size: 66%;
+      }
+    </style>
   </head>
   
   <body>
@@ -37,7 +43,16 @@
       <h2 id="background">Background</h2>
       <p>Since reflection in digital archaeology is in short supply, rather than focus specifically on my work with Open Context (<a href="http://opencontext.org" target="_blank">http://opencontext.org</a>), a data publishing service for archaeology, this essay will explore some of the institutional challenges faced by Open Context in particular and digital archaeology more generally. The perspectives offered here stem from my experience over 12 years as a dedicated “digital archaeologist,” founding and running a nonprofit endeavor to promote the dissemination and preservation of archaeological field data. Open Context is now referenced by the National Science Foundation (NSF) and the National Endowment for the Humanities (NEH) for data management for archaeology and the digital humanities. Its approach of “data sharing as publishing” emphasizes collaboration with dedicated editorial and information specialists to make data more intelligible and usable. Open Context publishes a wide variety of archaeological data, ranging from survey data to excavation documentation, artifact analyses, chemical analyses of artifacts, and detailed descriptions of bones and other biological remains found in archaeological contexts.</p>
 
-<p>The range, scale, and diversity of these data require expertise in data modeling and a commitment to continual development and iterative problem solving. Open Context has undergone several upgrades, the most recent in spring of 2015, to keep pace with technology changes and to leverage best practices in data stewardship. With data preservation through the University of California (the California Digital Library), Open Context now publishes more than 1.2 million archaeological records from projects worldwide. This is on a scale comparable to that of a major museum (for instance, the online collection of the Metropolitan Museum of New York makes some 407,000 records available). Open Context has made this remarkable achievement on a much more limited budget than the online collections of major museums. Grant funding from the William and Flora Hewlett Foundation, the NEH, the Alfred P. Sloan Foundation, NSF, and others has gone a long way largely because of the AAI’s status as an independent non-profit organization with an overhead much, much lower than large research institutions. The AAI and Open Context have also benefited from the growth of the Web and the “ecosystem” of projects and individuals in similar roles—undertaking innovative work outside of traditional academic roles. At the same time, our vantage point outside of the tenure track offers us a different perspective on the academy and its evolution. Those perspectives inform this essay.</p>
+<p>The range, scale, and diversity of these data require expertise in data modeling and a commitment to continual development and iterative problem solving. Open Context has undergone several upgrades, the most recent in spring of 2015, to keep pace with technology changes and to leverage best practices in data stewardship. With data preservation through the University of California (the California Digital Library), Open Context now publishes more than 1.2 million archaeological records from projects worldwide<a id="note-orig-1" class="fnote" href="#note-1">1</a>. This is on a scale comparable to that of a major museum (for instance, the online collection of the Metropolitan Museum of New York makes some 407,000 records available). Open Context has made this remarkable achievement on a much more limited budget than the online collections of major museums. Grant funding from the William and Flora Hewlett Foundation, the NEH, the Alfred P. Sloan Foundation, NSF, and others has gone a long way largely because of the AAI’s status as an independent non-profit organization with an overhead much, much lower than large research institutions. The AAI and Open Context have also benefited from the growth of the Web and the “ecosystem” of projects and individuals in similar roles—undertaking innovative work outside of traditional academic roles. At the same time, our vantage point outside of the tenure track offers us a different perspective on the academy and its evolution. Those perspectives inform this essay.</p>
+      </div>
+      
+      <div id="notes">
+        <h2>Notes</h2>
+        <div class="row" id="note-1">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-1"><a href="#note-orig-1"></a><sup>[1]</sup></a></div>
+          <div class="col-xs-8">Open Context now also benefits from mirror hosting and backups offered by the German Archaeological Institute (DAI) (see: http://opencontext.dainst.org). We are now beginning to do software development in collaboration with the DAI.</div>
+        </div>
       </div>
     </div>
   </body>
