Fixed note text

--- a/click-here-to-save-archaeology/index.html
+++ b/click-here-to-save-archaeology/index.html
@@ -277,7 +277,7 @@ https://www.google.com/search?q=cyark+%22open+access%22&tbm=nws" target="_blank"
           
           <div class="row note-row" id="note-11">
             <div class="col-xs-1 note-num"><a href="#note-orig-11">[11]</a></div>
-            <div class="col-xs-10">See Sarah Kansa's (Open Context's Editor) <a href="http://sites.nationalacademies.org/cs/groups/dbassesite/documents/webpage/dbasse_083132.pdf#page=20" target="_blank">traditional cultural expressions</a> to the White House Office of Science and Technology Policy (OSTP) on proposed frameworks for government sponsored research data.
+            <div class="col-xs-10">See Sarah Kansa's (Open Context's Editor) <a href="http://sites.nationalacademies.org/cs/groups/dbassesite/documents/webpage/dbasse_083132.pdf#page=20" target="_blank">policy recommendations</a> submitted to the White House Office of Science and Technology Policy (OSTP) on proposed frameworks for government sponsored research data.
             </div>
           </div>
           
