--- a/click-here-to-save-archaeology/index.html
+++ b/click-here-to-save-archaeology/index.html
@@ -30,11 +30,10 @@
       <div class="container-fluid">
         <div class="jumbotron">
           <h1>Click Here to Save Archaeology</h1>
-          <p><em>Working Draft: To be submitted for Mobilizing the Past edited E. Walcek Averett, J. Gordon, D. Counts. Grand Forks, ND: The Digital Press at the University of North Dakota</em>.
-          <p>
-          </p>Please provide comments, edits, suggestions or critiques to the <a href="https://github.com/ekansa-pubs/ekansa-pubs.github.io/issues" target="_blank">GitHub issue tracker for this draft</a>.
-          </p>
           
+          <br/>
+          <p class="small"><em>Working Draft: To be submitted for Mobilizing the Past edited E. Walcek Averett, J. Gordon, D. Counts. Grand Forks, ND: The Digital Press at the University of North Dakota</em>. Please provide comments, edits, suggestions or critiques to the <a href="https://github.com/ekansa-pubs/ekansa-pubs.github.io/issues" target="_blank">GitHub issue tracker for this draft</a>.
+          </p>
           
           <br/>
           <h3>Author</h3>
