--- a/click-here-to-save-archaeology/index.html
+++ b/click-here-to-save-archaeology/index.html
@@ -263,7 +263,7 @@ https://www.google.com/search?q=cyark+%22open+access%22&tbm=nws" target="_blank"
           
           <div class="row note-row" id="note-7">
             <div class="col-xs-1 note-num"><a href="#note-orig-7">[7]</a></div>
-            <div class="col-xs-10">N.B. Though Fish recognized the similarities in these approaches, none of the scholarly papers about “Local Contexts” actually cite Kansa et al. 2005, a publication that led to my participation in fruitful meetings, panel discussions, and presentations about these topics with Christen and others. 
+            <div class="col-xs-10">N.B. Fish recognized the similarities in these approaches; however (not to sound crabby) none of the scholarly papers about “Local Contexts” actually cite Kansa et al. 2005, a publication that led to my participation in fruitful meetings, panel discussions, and presentations about these topics with Christen and others. 
             </div>
           </div>
           
