Fixed citation title

--- a/click-here-to-save-archaeology/index.html
+++ b/click-here-to-save-archaeology/index.html
@@ -421,7 +421,7 @@ https://www.google.com/search?q=cyark+%22open+access%22&tbm=nws" target="_blank"
             <li>Kansa, Eric C., Sarah Whitcher Kansa, and Lynne Goldstein. 2013. “On Ethics, Sustainability, and Open Access in Archaeology.” <em>The SAA Archaeological Record</em> 13(4):15–22. Retrieved April 16, 2014 (http://www.saa.org/Portals/0/SAA/Publications/thesaaarchrec/September2013.pdf).
             </li>
             
-            <li>Kansa, Eric C., Jason Schultz, and Ahrash N. Bissell. 2005. “Protecting Traditional Knowledge and Expanding Access to Scientific Data: Juxtaposing Intellectual Property Agendas via a Model.” <em>International Journal of Cultural Property</em> 12(03):285–314. (http://journals.cambridge.org/article_S0940739105050204) (Open access: http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.107.3323&rep=rep1&type=pdf).
+            <li>Kansa, Eric C., Jason Schultz, and Ahrash N. Bissell. 2005. “Protecting Traditional Knowledge and Expanding Access to Scientific Data: Juxtaposing Intellectual Property Agendas via a 'Some Rights Reserved' Model.” <em>International Journal of Cultural Property</em> 12(03):285–314. (http://journals.cambridge.org/article_S0940739105050204) (Open access: http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.107.3323&rep=rep1&type=pdf).
             </li>
             
             <li>Kintigh, Keith and Jeffrey Altschul. 2010. “Sustaining the Digital Archaeological Record.” <em>Heritage Management</em> 3(2):264–74.
