--- a/click-here-to-save-archaeology/index.html
+++ b/click-here-to-save-archaeology/index.html
@@ -375,7 +375,7 @@ https://www.google.com/search?q=cyark+%22open+access%22&tbm=nws" target="_blank"
           
           <div class="row note-row" id="note-25">
             <div class="col-xs-1 note-num"><a href="#note-orig-25">[25]</a></div>
-            <div class="col-xs-10">Christen (2012) argues for exactly such culturally aware mindfulness. Again, the main focus of disagreement with her centers not on her vision for better ethical practice (where I absolutely agree), instead I have a different diagnosis of the problem in that I think neoliberal institutions and reward systems cause far more harm than advocacy for research "openness". 
+            <div class="col-xs-10">Christen (2012) argues for exactly such culturally aware mindfulness. Again, my main focus of disagreement with her centers not on her vision for better ethical practice (where I absolutely agree); instead, I have a different diagnosis of the root problems in that I think neoliberal institutions and reward systems cause far more harm than advocacy for research "openness". 
             </div>
           </div>
           
