--- a/post-trump/make-a-fool-of-me-please.html
+++ b/post-trump/make-a-fool-of-me-please.html
@@ -42,7 +42,7 @@
           <div class="col-md-11">
             <div style="width:50%;">
               <img class="img-responsive" src="https://archive.org/download/TrumpElectoralCol/Trump-electoral-col.png" />
-              <p class="small text-center">Tweets during the 2012 Obama victory over Romney Tweets during the 2012 Obama victory over Romney</p>
+              <p class="small text-center">Trump's tweets during the 2012 Obama victory over Romney</p>
             </div>
           </div>
         </div>
